# ChangeLog for x11-plugins/asclock
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/asclock/ChangeLog,v 1.20 2008/06/26 12:50:53 drac Exp $

  08 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  asclock-2.0.12.ebuild:
  backfill modX deps

  08 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  asclock-2.0.12-r1.ebuild:
  Stable on ppc wrt bug #153218

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  asclock-2.0.12-r1.ebuild:
  Stable on sparc wrt #153218

  23 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  asclock-2.0.12-r1.ebuild:
  stable x86, bug #153218

  22 Nov 2006; Joseph Jezak <josejx@gentoo.org> asclock-2.0.12-r1.ebuild:
  Marked ppc stable for bug #153218.

*asclock-2.0.12-r1 (10 Oct 2006)

  10 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  +files/asclock-gcc41.patch, +asclock-2.0.12-r1.ebuild:
  Modular X + gcc-4.1 fixes.

  02 Jan 2006; Michele Noberasco <s4t4n@gentoo.org> asclock-2.0.12.ebuild:
  removed COPYING and INSTALL from dodoc.

  16 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> asclock-2.0.12.ebuild:
  Remove GNUish cp -a call. Bug #103487.

  17 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml:
  Added metadata.xml (afterstep herd).

  06 Sep 2004; Hardave Riar <hardave@gentoo.org> asclock-2.0.12.ebuild:
  Stable on mips

  08 Jul 2004; Hardave Riar <hardave@gentoo.org> asclock-2.0.12.ebuild:
  Added ~mips KEYWORD

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> asclock-2.0.12.ebuild:
  glibc -> libc

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*asclock-2.0.12 (14 Apr 2002)

  14 Apr 2002; Seemant Kulleen <seemant@gentoo.org> asclock-2.0.12-r1.ebuild :

  Cleaned up ebuild a little bit

*asclock-2.0.12 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is