@@ -1,5 +1,5 @@
 AUX asclock-gcc41.patch 1528 RMD160 9e9bd1640cb1f4335d5e10ee11b8232503f4418b SHA1 b8b998d3fb10dfb93717981be7a633abf3c1f99e SHA256 e5a7889a089da8a9c94dfc74f6bd40ac4cdcf82e59db1b4b356915cd96b66355
 DIST asclock-2.0.12.tar.gz 111858 RMD160 c3673329c5bcf5be097abb770e861502e20f77ca SHA1 8527d7b013f6d55bdb49e6d6a08c2085d081b486 SHA256 70df9bd991bc707c0fdf76ea1acbeff5924e9ae0b0704feb46afa591030704e6
-EBUILD asclock-2.0.12-r1.ebuild 1603 RMD160 414e4cec0bc9a560c3f1cdb0a7ed0fcdc7ba89c0 SHA1 46351333bb07749cf959b403a6401b726cee3fda SHA256 a163b0bf993e79970a9327cf744f967bafcea743f0881a5a29b8732a8671429a
-MISC ChangeLog 2237 RMD160 f9d018012f28cfe0ad05bdd7c144ca80b03067d4 SHA1 4e8ca9bb281bca6ac5bde8b0d8ae5cfde5f6dcca SHA256 561913f6e2c5bad19cc73ec8dc749a69e36efffbf24bc1c968284ba3b428cabf
+EBUILD asclock-2.0.12-r1.ebuild 1646 RMD160 a2251470d9321492dfe4f909b508ecfc32169202 SHA1 8b6a4bab4bbc6bffc06a01f7a93414d7a3bf28f0 SHA256 e6bc13f258ba38e27a8fed832385cc0e9ea5724aa5bc0c95386bac5a09db134a
+MISC ChangeLog 2376 RMD160 fae6c997589b0a55dacb7853d9e5b92696ac8eb2 SHA1 ad328d18026ba5c29a28f21cfc3f11f0c6296ea2 SHA256 fab5cc999bc409349446a147211823f237dad33fedfdaab93071a9d4d384c999
 MISC metadata.xml 163 RMD160 46208909b296ad228342e5181a46ef97a03129c7 SHA1 deae2be5c8bfd52bb2842f43b9dc83a8e9a222a6 SHA256 27db507976bc3b54b88de916fc7a04aed51f3cc08c72ba9a1d012ef904bbc57c
