@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/asclock
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/asclock/ChangeLog,v 1.20 2008/06/26 12:50:53 drac Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/asclock/ChangeLog,v 1.21 2009/05/03 02:13:07 arfrever Exp $
+
+  03 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  asclock-2.0.12-r1.ebuild:
+  Respect LDFLAGS (bug #171351).
 
   08 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
   asclock-2.0.12.ebuild:
